--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 
 # Web Framework & Server
 flask>=3.0.0,<4.0.0
+flask-cors>=4.0.0,<5.0.0
 werkzeug>=3.0.0,<4.0.0
 
 
@@ -14,6 +15,10 @@ requests>=2.32.0,<3.0.0
 rich==14.0.0
 setuptools==66.1.1
 
+# Computer Vision & Scientific Computing
+opencv-python>=4.8.0,<5.0.0
+numpy>=1.24.0,<2.0.0
+matplotlib>=3.7.0,<4.0.0
 
 # Production Server (optional for Docker deployment)
 gunicorn>=21.0.0,<23.0.0
