feat: add local deployment with docker compose

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,38 @@
+# Deployment Configuration
+# Set to 'local' for Docker Compose deployment, 'production' for GCP Cloud Run
+DEPLOYMENT_MODE=local
 
-# GCP project ID
-PROJECT_ID=xx
-GCP_REGION=xx
-REPO_NAME=xx-server-docker-repo
-IMAGE_NAME=daylight-xx-img
-SERVER_NAME=xx-server
-# ============================================================================
-# Scaleway (SCW) Variables
-# Used in: build_scw.sh
-# ============================================================================
+# API Authentication
+API_TOKEN=your_secret_token_here
 
+# Docker Images (GCP Artifact Registry)
+# Override these if using different image versions or registries
+# COLORMANAGE_IMAGE=europe-north2-docker.pkg.dev/daylight-factor/daylight-server-docker-repo/daylight-colormanage-img:latest
+# DAYLIGHT_IMAGE=europe-north2-docker.pkg.dev/daylight-factor/daylight-server-docker-repo/daylight-model-img:latest
+# METRICS_IMAGE=europe-north2-docker.pkg.dev/daylight-factor/daylight-server-docker-repo/daylight-metrics-img:latest
+# OBSTRUCTION_IMAGE=europe-north2-docker.pkg.dev/daylight-factor/daylight-server-docker-repo/daylight-obstruction-img:latest
+# ENCODER_IMAGE=europe-north2-docker.pkg.dev/daylight-factor/daylight-server-docker-repo/daylight-encoder-img:latest
+# POSTPROCESS_IMAGE=europe-north2-docker.pkg.dev/daylight-factor/daylight-server-docker-repo/daylight-postprocess-img:latest
 
-SCW_PROJECT_ID=xx
-SCW_REGISTRY_NAMESPACE=upskiller-nsp
-SCW_SERVER=serve-xx-container
-SCW_IMAGE=xx-server-image
-SCW_SERVE_CONTAINER_NAME=serve-xxx-container
+# Local Deployment Service URLs (Docker Compose)
+# These are used when DEPLOYMENT_MODE=local
+# Override these if using custom service names or ports
+COLORMANAGE_SERVICE_URL=http://colormanage:8080
+DAYLIGHT_SERVICE_URL=http://daylight:8080
+DF_EVAL_SERVICE_URL=http://metrics:8080
+OBSTRUCTION_SERVICE_URL=http://obstruction:8080
+ENCODER_SERVICE_URL=http://encoder:8080
+POSTPROCESS_SERVICE_URL=http://postprocess:8080
+
+# Production Service URLs (GCP Cloud Run)
+# These are used when DEPLOYMENT_MODE=production
+# Override these if your production URLs differ
+# COLORMANAGE_SERVICE_URL=https://colormanage-server-182483330095.europe-north2.run.app
+# DAYLIGHT_SERVICE_URL=https://daylight-factor-182483330095.europe-north2.run.app
+# DF_EVAL_SERVICE_URL=https://df-eval-server-182483330095.europe-north2.run.app
+# OBSTRUCTION_SERVICE_URL=https://obstruction-server-182483330095.europe-north2.run.app
+# ENCODER_SERVICE_URL=https://encoder-server-182483330095.europe-north2.run.app
+# POSTPROCESS_SERVICE_URL=https://daylight-processing-182483330095.europe-north2.run.app
+
+# Server Configuration
+PORT=8080
