feat: connect merger service and integrate all of them in a single pipeline

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@
 DEPLOYMENT_MODE=local
 
 # API Authentication
+# Used for both incoming request authentication and outgoing requests to GCP microservices
+# In development: Required when calling GCP Cloud Run services from localhost
+# In production: Services authenticate automatically within the same GCP project
 API_TOKEN=your_secret_token_here
 
 # Docker Images (GCP Artifact Registry)
@@ -21,7 +24,10 @@ COLORMANAGE_SERVICE_URL=http://colormanage:8080
 DAYLIGHT_SERVICE_URL=http://daylight:8080
 DF_EVAL_SERVICE_URL=http://metrics:8080
 OBSTRUCTION_SERVICE_URL=http://obstruction:8080
-ENCODER_SERVICE_URL=http://encoder:8080
+# Encoder runs on same host as main server (localhost:8082)
+ENCODER_SERVICE_URL=http://localhost:8082
+# Model server runs on external server (port 8083)
+MODEL_SERVICE_URL=http://51.15.197.220:8083
 POSTPROCESS_SERVICE_URL=http://postprocess:8080
 
 # Production Service URLs (GCP Cloud Run)
