--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "Upskiller-tool"
+name = "Lux backend"
 version = "0.1.0"
-description = "case study for RTE RFQ process"
+description = "Lux backend"
 authors = ["stasja fedorova <stasja.fedorova@upskiller.xyz>"]
 readme = "README.md"
 
