feat: add local deployment

--- a/deployment/.env.full-stack
+++ b/deployment/.env.full-stack
@@ -7,6 +7,13 @@ THREADS=8
 # Deployment Mode
 DEPLOYMENT_MODE=local
 
+# Service URLs (override defaults to use container names in Docker network)
+ENCODER_SERVICE_URL=http://encoder-service:8082
+MODEL_SERVICE_URL=http://model-service:8083
+MERGER_SERVICE_URL=http://merger-service:8084
+OBSTRUCTION_SERVICE_URL=http://obstruction-service:8081
+STATS_SERVICE_URL=http://stats-service:8085
+
 # Flask Configuration
 FLASK_ENV=production
 FLASK_DEBUG=False
