--- a/deployment/docker-compose-full-stack.yml
+++ b/deployment/docker-compose-full-stack.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Main Gateway Server (port 8080)
   server-lux:
@@ -17,13 +15,19 @@ services:
       - THREADS=${THREADS:-8}
       - FLASK_ENV=production
       - FLASK_DEBUG=False
+      - ENCODER_SERVICE_URL=http://encoder-service:8082
+      - MODEL_SERVICE_URL=http://model-service:8083
+      - MERGER_SERVICE_URL=http://merger-service:8084
+      - OBSTRUCTION_SERVICE_URL=http://obstruction-service:8081
+      - STATS_SERVICE_URL=http://stats-service:8085
     env_file:
-      - .env.docker
+      - .env.full-stack
     depends_on:
       - obstruction-service
       - encoder-service
       - model-service
       - merger-service
+      - stats-service
     networks:
       - lux-network
     healthcheck:
@@ -120,6 +124,29 @@ services:
       - lux-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8084/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  # Stats Service (port 8085)
+  stats-service:
+    build:
+      context: ./services/server_stats
+      dockerfile: Dockerfile
+    container_name: stats-service
+    restart: unless-stopped
+    ports:
+      - "8085:8085"
+    environment:
+      - PORT=8085
+      - WORKERS=${WORKERS:-1}
+      - THREADS=${THREADS:-8}
+      - FLASK_ENV=production
+    networks:
+      - lux-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8085/"]
       interval: 30s
       timeout: 10s
       retries: 3
